--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "react-combine-reducers",
-  "version": "1.0.3",
-  "description": "A helper utility to apply combineReducers functionality in react useReducer hook for large scale applications",
+  "name": "@brunoparga/react-combine-reducers",
+  "version": "1.1.1",
+  "description": "A helper utility to apply combineReducers functionality in React useReducer hook, for large scale applications",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf lib && babel src --out-dir lib"
+    "build": "rm -rf lib && babel src --out-dir lib",
+    "test": "standard --fix && jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ankita1010/react-combine-reducers.git"
+    "url": "git+https://github.com/brunoparga/react-combine-reducers.git"
   },
   "keywords": [
     "react",
@@ -18,18 +19,25 @@
     "reducers",
     "hooks"
   ],
-  "author": "Ankita Chakraborty",
+  "author": "Bruno Parga",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ankita1010/react-combine-reducers/issues"
+    "url": "https://github.com/brunoparga/react-combine-reducers/issues"
   },
-  "homepage": "https://github.com/ankita1010/react-combine-reducers#readme",
+  "homepage": "https://github.com/brunoparga/react-combine-reducers#readme",
+  "standard": {
+    "ignore": [
+      "/lib"
+    ]
+  },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0"
+    "core-js": "^3.8.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4"
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "jest": "^26.6.3",
+    "standard": "^16.0.3"
   }
 }
